--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ body {
     color: #db4f3d;
 }
 
+.mobile-nav {
+    display: none;
+}
+
 .home {
     color: #db4f3d !important;
 }
@@ -86,7 +90,8 @@ body {
 }
 
 .intro {
-    width: 1150px;
+    /* width: 1150px; */
+    width: calc(75% * (6 / 6));
     margin-inline: auto;
     font-size: 22px;
     color: #7a7a7a;
@@ -139,4 +144,81 @@ body {
 .copyright span:hover {
     color: #db4f3d;
     text-decoration: underline;
+}
+
+@media screen and (max-width: 1000px) {
+    .navbar {
+        padding-top: 0;
+    }
+    
+    .nav-items li {
+        display: none;
+    }
+
+    .mobile-nav {
+        display: block;
+    }
+
+    .menu {
+        font-weight: normal;
+        font-size: 1rem;
+        text-transform: uppercase;
+        transition: all 0.3s ease;
+        padding-bottom: 1rem;
+    }
+
+    .menu:active {
+        color: #db4f3d;
+    }
+
+    .mobile-nav-items {
+        display: none;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin-top: 14rem;
+        margin-inline: auto;
+        width: 50%;
+        height: 40%;
+        padding-inline: 1rem;
+        padding-block: 2rem;
+        background-color: #222222;
+        z-index: 100;
+    }
+
+    .mobile-nav-items li {
+        list-style: none;
+        /* text-align: left; */
+        background-color: #222222;
+        margin-top: 2rem;
+    }
+
+    .mobile-nav-items li a {
+        display: flex;
+        justify-content: left;
+        text-decoration: none;
+        background-color: #222222;
+    }
+
+    .intro {
+        font-size: 18px;
+    }
+
+    .product-detail {
+        font-size: 18px;
+        width: 80%;
+        margin-inline: auto;
+    }
+
+    .coffee-img {
+        width: 90%;
+    }
+
+    .socials {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
