--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: #000;
     /* background-color: #fff; */
-    color: #fff;
 }
 
 body {
     font-family: sans-serif;
+    background-color: #000;
+    color: #fff;
 }
 
 .header {
@@ -183,7 +183,8 @@ body {
         width: 50%;
         height: 40%;
         padding-inline: 1rem;
-        padding-block: 2rem;
+        padding-top: 1rem;
+        padding-bottom: 2rem;
         background-color: #222222;
         z-index: 100;
     }
@@ -200,6 +201,11 @@ body {
         justify-content: left;
         text-decoration: none;
         background-color: #222222;
+        color: #fff;
+    }
+
+    .mobile-home {
+        color: #db4f3d !important;
     }
 
     .intro {
